--- a/index.html
+++ b/index.html
@@ -3,75 +3,74 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>💖 Mega Crush Page Animated</title>
+<title>💖 Ultimate Crush Page v7</title>
 
-<!-- Music autoplay -->
+<!-- Background Music -->
 <audio id="bgMusic" autoplay loop>
   <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
 </audio>
 
 <style>
-/* RESET */
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif;}
-body{overflow:hidden;height:100vh;background:#111;color:white;cursor:none;}
+/* ===== RESET ===== */
+*{margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI',sans-serif;}
+body{overflow:hidden; height:100vh; background:#111; cursor:none; color:white;}
 
-/* SLIDER */
-.slider{display:flex;width:400vw;height:100vh;transition:transform 0.8s ease;}
-.slide{width:100vw;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:40px;position:relative;}
+/* ===== SLIDER ===== */
+.slider{display:flex; width:400vw; height:100vh; transition:transform 1s ease;}
+.slide{width:100vw; height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; padding:40px; position:relative; overflow:hidden;}
 
-/* SLIDE COLORS */
+/* ===== SLIDE BACKGROUNDS ===== */
 .slide1{background:linear-gradient(135deg,#ff758f,#ff4b6c);}
 .slide2{background:linear-gradient(135deg,#6a11cb,#2575fc);}
 .slide3{background:linear-gradient(135deg,#f7971e,#ffd200);}
 .slide4{background:linear-gradient(135deg,#11998e,#38ef7d);}
 
-/* HEADINGS & TEXT */
+/* ===== HEADINGS & TEXT ===== */
 h1,h2,h3{margin-bottom:10px;}
-h1{font-size:3rem;}
-h2{font-size:2.2rem;}
-p{font-size:1.2rem;max-width:600px;margin-bottom:10px;}
-span{font-size:1rem;color:white;}
-.heart{font-size:3rem;animation:beat 1.5s infinite;margin-bottom:10px;}
+h1{font-size:3rem; text-shadow:0 0 10px #fff;}
+h2{font-size:2.2rem; text-shadow:0 0 5px #fff;}
+p{font-size:1.2rem; max-width:600px; margin-bottom:10px;}
+span{font-size:1rem; color:white;}
+.heart{font-size:3rem; animation:beat 1.5s infinite; margin-bottom:10px;}
 @keyframes beat{0%,100%{transform:scale(1);}50%{transform:scale(1.3);}}
 
-/* BUTTONS */
-button{margin-top:15px;padding:12px 25px;border:none;border-radius:30px;background:#fff;color:#ff4b6c;font-weight:bold;cursor:pointer;transition:0.3s;}
-button:hover{transform:scale(1.1);background:#ff2e63;color:white;}
+/* ===== BUTTONS ===== */
+button{margin-top:15px; padding:12px 25px; border:none; border-radius:30px; background:#fff; color:#ff4b6c; font-weight:bold; cursor:pointer; transition:0.3s;}
+button:hover{transform:scale(1.1); background:#ff2e63; color:white;}
 
-/* NAV DOTS */
-.dots{position:fixed;bottom:20px;width:100%;display:flex;justify-content:center;gap:10px;z-index:100;}
-.dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.4);cursor:pointer;}
+/* ===== NAV DOTS ===== */
+.dots{position:fixed; bottom:20px; width:100%; display:flex; justify-content:center; gap:10px; z-index:100;}
+.dot{width:12px; height:12px; border-radius:50%; background:rgba(255,255,255,0.4); cursor:pointer;}
 .dot.active{background:white;}
 
-/* FLOATING HEARTS AND SPARKLES */
-.floating{position:absolute;opacity:0.5;animation:float linear infinite;}
+/* ===== FLOATING HEARTS AND SPARKLES ===== */
+.floating{position:absolute; opacity:0.5; animation:float linear infinite;}
 @keyframes float{0%{transform:translateY(100vh);}100%{transform:translateY(-10vh);}}
 
-/* SPARKLE */
-.sparkle{position:absolute;width:5px;height:5px;background:#fff;border-radius:50%;pointer-events:none;opacity:0.8;animation:sparkleAnim 1s linear infinite;}
-@keyframes sparkleAnim{0%{transform:translate(0,0) scale(1);opacity:1;}100%{transform:translate(50px,-50px) scale(0);opacity:0;}}
+.sparkle{position:absolute; width:5px; height:5px; background:#fff; border-radius:50%; pointer-events:none; opacity:0.8; animation:sparkleAnim 1s linear infinite;}
+@keyframes sparkleAnim{0%{transform:translate(0,0) scale(1); opacity:1;}100%{transform:translate(50px,-50px) scale(0); opacity:0;}}
 
-/* EXPLODING HEARTS */
-.explodingHeart{position:absolute;font-size:20px;pointer-events:none;animation:explode 1s forwards;}
-@keyframes explode{0%{transform:scale(0) translateY(0);opacity:1;}100%{transform:scale(1.5) translateY(-150px) rotate(360deg);opacity:0;}}
+/* ===== EXPLODING HEARTS ===== */
+.explodingHeart{position:absolute; font-size:20px; pointer-events:none; animation:explode 1s forwards;}
+@keyframes explode{0%{transform:scale(0) translateY(0); opacity:1;}100%{transform:scale(1.5) translateY(-150px) rotate(360deg); opacity:0;}}
 
-/* TABLE */
-table{border-collapse:collapse;margin:15px 0;}
-table, th, td{border:1px solid #fff;padding:8px;}
+/* ===== TABLE ===== */
+table{border-collapse:collapse; margin:15px 0;}
+table, th, td{border:1px solid #fff; padding:8px;}
 th{background:rgba(255,255,255,0.2);}
 td{background:rgba(255,255,255,0.1);}
 
-/* FORM */
-input, textarea{padding:8px;border-radius:5px;border:none;margin:5px;}
+/* ===== FORM ===== */
+input, textarea{padding:8px; border-radius:5px; border:none; margin:5px;}
 input[type="text"], input[type="email"], textarea{width:250px;}
 
-/* DECORATIVE DIVS */
-.dec{width:20px;height:20px;border-radius:50%;position:absolute;opacity:0.3;}
-.dec1{background:#ff4b6c;top:50px;left:100px;}
-.dec2{background:#ffd1dc;top:200px;left:300px;}
-.dec3{background:#fbc2eb;top:400px;left:500px;}
-.dec4{background:#ff758f;top:150px;left:700px;}
-.dec5{background:#38ef7d;top:300px;left:900px;}
+/* ===== DECORATIVE DIVS ===== */
+.dec{width:20px; height:20px; border-radius:50%; position:absolute; opacity:0.3;}
+.dec1{background:#ff4b6c; top:50px; left:100px;}
+.dec2{background:#ffd1dc; top:200px; left:300px;}
+.dec3{background:#fbc2eb; top:400px; left:500px;}
+.dec4{background:#ff758f; top:150px; left:700px;}
+.dec5{background:#38ef7d; top:300px; left:900px;}
 </style>
 </head>
 <body>
@@ -85,21 +84,18 @@ input[type="text"], input[type="email"], textarea{width:250px;}
   <h1>Hello Sweetheart!</h1>
   <h2>Welcome to Your Mega Crush Page 💌</h2>
   <p><span>I made this page for you 😍</span></p>
-
   <ul>
     <li>Fun times</li>
     <li>Smiles</li>
     <li>Laughs</li>
     <li>Heartbeats 💓</li>
   </ul>
-
   <table>
     <tr><th>Things I Like</th><th>Emoji</th></tr>
     <tr><td>Your Smile</td><td>😊</td></tr>
     <tr><td>Your Laugh</td><td>😂</td></tr>
     <tr><td>Your Eyes</td><td>😍</td></tr>
   </table>
-
   <div class="dec dec1"></div>
   <div class="dec dec2"></div>
 </div>
@@ -112,14 +108,12 @@ input[type="text"], input[type="email"], textarea{width:250px;}
   <p><span>Your presence lights up my day 🌟</span></p>
   <img src="https://i.ibb.co/5Tg2t0L/heart.png" alt="Heart">
   <a href="https://www.w3schools.com/html/" target="_blank">Learn HTML Together</a>
-
   <form>
     <label>Name: <input type="text" placeholder="Your name"></label><br>
     <label>Email: <input type="email" placeholder="Your email"></label><br>
     <label>Message: <textarea placeholder="Leave a sweet note"></textarea></label><br>
     <button id="loveBtn2">Send 💌</button>
   </form>
-
   <div class="dec dec3"></div>
   <div class="dec dec4"></div>
 </div>
@@ -131,14 +125,12 @@ input[type="text"], input[type="email"], textarea{width:250px;}
   <h2>Thank You</h2>
   <p><span>Every little thing about you is amazing ✨</span></p>
   <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Love Music"></iframe>
-
   <table>
     <tr><th>Fun Activities</th><th>Emoji</th></tr>
     <tr><td>Walks</td><td>🚶‍♂️</td></tr>
     <tr><td>Movies</td><td>🎬</td></tr>
     <tr><td>Coffee</td><td>☕</td></tr>
   </table>
-
   <div class="dec dec5"></div>
 </div>
 
@@ -162,7 +154,7 @@ input[type="text"], input[type="email"], textarea{width:250px;}
 </div>
 
 <script>
-// ---------------- SLIDER NAV ----------------
+// ------------- SLIDER NAVIGATION -------------
 let current=0;
 const slider=document.getElementById("slider");
 const dots=document.querySelectorAll(".dot");
@@ -173,9 +165,9 @@ function goSlide(i){
 }
 function updateDots(){dots.forEach(d=>d.classList.remove("active")); dots[current].classList.add("active");}
 
-// ---------------- FLOATING HEARTS ----------------
+// ------------- FLOATING HEARTS -------------
 const colors=['#ff4b6c','#ff758f','#ffd1dc','#ff9a9e','#fbc2eb'];
-for(let i=0;i<80;i++){
+for(let i=0;i<100;i++){
   const f=document.createElement('div'); f.className='floating'; f.innerText='💖';
   f.style.left=Math.random()*100+'vw';
   f.style.fontSize=(Math.random()*20+10)+'px';
@@ -185,11 +177,11 @@ for(let i=0;i<80;i++){
   document.body.appendChild(f);
 }
 
-// ---------------- BUTTON EXPLODING HEARTS ----------------
+// ------------- BUTTON EXPLODING HEARTS -------------
 const btn=document.getElementById('loveBtn2');
 btn.addEventListener('click', function(e){
   e.preventDefault();
-  for(let i=0;i<20;i++){
+  for(let i=0;i<30;i++){
     const h=document.createElement('div');
     h.className='explodingHeart';
     h.style.left=(e.clientX+Math.random()*50-25)+'px';
@@ -197,7 +189,7 @@ btn.addEventListener('click', function(e){
     h.style.color=colors[Math.floor(Math.random()*colors.length)];
     h.innerText='💖';
     document.body.appendChild(h);
-    setTimeout(()=>h.remove(),1000);
+    setTimeout(()=>h.remove(),1200);
   }
 });
 </script>
