--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>💖 Ultimate Crush Page v7</title>
+<title>💖 Ultimate Single Slide Crush Page</title>
 
 <!-- Background Music -->
 <audio id="bgMusic" autoplay loop>
@@ -11,161 +11,101 @@
 </audio>
 
 <style>
-/* ===== RESET ===== */
-*{margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI',sans-serif;}
-body{overflow:hidden; height:100vh; background:#111; cursor:none; color:white;}
+/* RESET */
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif;}
+body{overflow:hidden;height:100vh;background:#111;color:white;cursor:none;position:relative;}
 
-/* ===== SLIDER ===== */
-.slider{display:flex; width:400vw; height:100vh; transition:transform 1s ease;}
-.slide{width:100vw; height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; padding:40px; position:relative; overflow:hidden;}
+/* SLIDE */
+.slide{width:100vw;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:40px;position:relative; background:linear-gradient(135deg,#ff758f,#ff4b6c);}
 
-/* ===== SLIDE BACKGROUNDS ===== */
-.slide1{background:linear-gradient(135deg,#ff758f,#ff4b6c);}
-.slide2{background:linear-gradient(135deg,#6a11cb,#2575fc);}
-.slide3{background:linear-gradient(135deg,#f7971e,#ffd200);}
-.slide4{background:linear-gradient(135deg,#11998e,#38ef7d);}
-
-/* ===== HEADINGS & TEXT ===== */
+/* HEADINGS & TEXT */
 h1,h2,h3{margin-bottom:10px;}
-h1{font-size:3rem; text-shadow:0 0 10px #fff;}
-h2{font-size:2.2rem; text-shadow:0 0 5px #fff;}
-p{font-size:1.2rem; max-width:600px; margin-bottom:10px;}
-span{font-size:1rem; color:white;}
-.heart{font-size:3rem; animation:beat 1.5s infinite; margin-bottom:10px;}
+h1{font-size:3rem;text-shadow:0 0 10px #fff;}
+h2{font-size:2.2rem;text-shadow:0 0 5px #fff;}
+p{font-size:1.2rem;max-width:600px;margin-bottom:10px;}
+span{font-size:1rem;color:white;}
+.heart{font-size:3rem;animation:beat 1.5s infinite;margin-bottom:10px;}
 @keyframes beat{0%,100%{transform:scale(1);}50%{transform:scale(1.3);}}
 
-/* ===== BUTTONS ===== */
-button{margin-top:15px; padding:12px 25px; border:none; border-radius:30px; background:#fff; color:#ff4b6c; font-weight:bold; cursor:pointer; transition:0.3s;}
-button:hover{transform:scale(1.1); background:#ff2e63; color:white;}
+/* BUTTON */
+button{margin-top:15px;padding:12px 25px;border:none;border-radius:30px;background:#fff;color:#ff4b6c;font-weight:bold;cursor:pointer;transition:0.3s;}
+button:hover{transform:scale(1.1);background:#ff2e63;color:white;}
 
-/* ===== NAV DOTS ===== */
-.dots{position:fixed; bottom:20px; width:100%; display:flex; justify-content:center; gap:10px; z-index:100;}
-.dot{width:12px; height:12px; border-radius:50%; background:rgba(255,255,255,0.4); cursor:pointer;}
-.dot.active{background:white;}
-
-/* ===== FLOATING HEARTS AND SPARKLES ===== */
-.floating{position:absolute; opacity:0.5; animation:float linear infinite;}
+/* FLOATING HEARTS */
+.floating{position:absolute;opacity:0.5;animation:float linear infinite;}
 @keyframes float{0%{transform:translateY(100vh);}100%{transform:translateY(-10vh);}}
 
-.sparkle{position:absolute; width:5px; height:5px; background:#fff; border-radius:50%; pointer-events:none; opacity:0.8; animation:sparkleAnim 1s linear infinite;}
-@keyframes sparkleAnim{0%{transform:translate(0,0) scale(1); opacity:1;}100%{transform:translate(50px,-50px) scale(0); opacity:0;}}
+/* SPARKLES */
+.sparkle{position:absolute;width:5px;height:5px;background:#fff;border-radius:50%;pointer-events:none;opacity:0.8;animation:sparkleAnim 1s linear infinite;}
+@keyframes sparkleAnim{0%{transform:translate(0,0) scale(1);opacity:1;}100%{transform:translate(50px,-50px) scale(0);opacity:0;}}
 
-/* ===== EXPLODING HEARTS ===== */
-.explodingHeart{position:absolute; font-size:20px; pointer-events:none; animation:explode 1s forwards;}
-@keyframes explode{0%{transform:scale(0) translateY(0); opacity:1;}100%{transform:scale(1.5) translateY(-150px) rotate(360deg); opacity:0;}}
+/* EXPLODING HEARTS */
+.explodingHeart{position:absolute;font-size:20px;pointer-events:none;animation:explode 1s forwards;}
+@keyframes explode{0%{transform:scale(0) translateY(0);opacity:1;}100%{transform:scale(1.5) translateY(-150px) rotate(360deg);opacity:0;}}
 
-/* ===== TABLE ===== */
-table{border-collapse:collapse; margin:15px 0;}
-table, th, td{border:1px solid #fff; padding:8px;}
+/* TABLE */
+table{border-collapse:collapse;margin:15px 0;}
+table, th, td{border:1px solid #fff;padding:8px;}
 th{background:rgba(255,255,255,0.2);}
 td{background:rgba(255,255,255,0.1);}
 
-/* ===== FORM ===== */
-input, textarea{padding:8px; border-radius:5px; border:none; margin:5px;}
+/* FORM */
+input, textarea{padding:8px;border-radius:5px;border:none;margin:5px;}
 input[type="text"], input[type="email"], textarea{width:250px;}
 
-/* ===== DECORATIVE DIVS ===== */
-.dec{width:20px; height:20px; border-radius:50%; position:absolute; opacity:0.3;}
-.dec1{background:#ff4b6c; top:50px; left:100px;}
-.dec2{background:#ffd1dc; top:200px; left:300px;}
-.dec3{background:#fbc2eb; top:400px; left:500px;}
-.dec4{background:#ff758f; top:150px; left:700px;}
-.dec5{background:#38ef7d; top:300px; left:900px;}
+/* DECORATIVE DIVS */
+.dec{width:20px;height:20px;border-radius:50%;position:absolute;opacity:0.3;}
+.dec1{background:#ff4b6c;top:50px;left:100px;}
+.dec2{background:#ffd1dc;top:200px;left:300px;}
+.dec3{background:#fbc2eb;top:400px;left:500px;}
+.dec4{background:#ff758f;top:150px;left:700px;}
+.dec5{background:#38ef7d;top:300px;left:900px;}
 </style>
 </head>
 <body>
 
-<!-- SLIDER -->
-<div class="slider" id="slider">
+<!-- SINGLE SLIDE -->
+<div class="slide">
 
-<!-- SLIDE 1 -->
-<div class="slide slide1">
-  <div class="heart">💖</div>
-  <h1>Hello Sweetheart!</h1>
-  <h2>Welcome to Your Mega Crush Page 💌</h2>
-  <p><span>I made this page for you 😍</span></p>
-  <ul>
-    <li>Fun times</li>
-    <li>Smiles</li>
-    <li>Laughs</li>
-    <li>Heartbeats 💓</li>
-  </ul>
-  <table>
-    <tr><th>Things I Like</th><th>Emoji</th></tr>
-    <tr><td>Your Smile</td><td>😊</td></tr>
-    <tr><td>Your Laugh</td><td>😂</td></tr>
-    <tr><td>Your Eyes</td><td>😍</td></tr>
-  </table>
-  <div class="dec dec1"></div>
-  <div class="dec dec2"></div>
-</div>
+<div class="heart">💖</div>
+<h1>Hello Sweetheart!</h1>
+<h2>Welcome to Your Ultimate Crush Page 💌</h2>
+<p><span>I made this page for you 😍</span></p>
 
-<!-- SLIDE 2 -->
-<div class="slide slide2">
-  <div class="heart">✨</div>
-  <h1>You’re Special</h1>
-  <h2>Bright Star</h2>
-  <p><span>Your presence lights up my day 🌟</span></p>
-  <img src="https://i.ibb.co/5Tg2t0L/heart.png" alt="Heart">
-  <a href="https://www.w3schools.com/html/" target="_blank">Learn HTML Together</a>
-  <form>
-    <label>Name: <input type="text" placeholder="Your name"></label><br>
-    <label>Email: <input type="email" placeholder="Your email"></label><br>
-    <label>Message: <textarea placeholder="Leave a sweet note"></textarea></label><br>
-    <button id="loveBtn2">Send 💌</button>
-  </form>
-  <div class="dec dec3"></div>
-  <div class="dec dec4"></div>
-</div>
+<ul>
+  <li>Fun times</li>
+  <li>Smiles</li>
+  <li>Laughs</li>
+  <li>Heartbeats 💓</li>
+</ul>
 
-<!-- SLIDE 3 -->
-<div class="slide slide3">
-  <div class="heart">💫</div>
-  <h1>I Appreciate You</h1>
-  <h2>Thank You</h2>
-  <p><span>Every little thing about you is amazing ✨</span></p>
-  <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Love Music"></iframe>
-  <table>
-    <tr><th>Fun Activities</th><th>Emoji</th></tr>
-    <tr><td>Walks</td><td>🚶‍♂️</td></tr>
-    <tr><td>Movies</td><td>🎬</td></tr>
-    <tr><td>Coffee</td><td>☕</td></tr>
-  </table>
-  <div class="dec dec5"></div>
-</div>
+<table>
+  <tr><th>Things I Like</th><th>Emoji</th></tr>
+  <tr><td>Your Smile</td><td>😊</td></tr>
+  <tr><td>Your Laugh</td><td>😂</td></tr>
+  <tr><td>Your Eyes</td><td>😍</td></tr>
+</table>
 
-<!-- SLIDE 4 -->
-<div class="slide slide4">
-  <div class="heart">💌</div>
-  <h1>Just So You Know</h1>
-  <h2>You Matter ❤️</h2>
-  <p><span>You’ve made me smile today!</span></p>
-  <button onclick="goSlide(0)">Replay 💖</button>
-</div>
+<img src="https://i.ibb.co/5Tg2t0L/heart.png" alt="Heart">
+<a href="https://www.w3schools.com/html/" target="_blank">Learn HTML Together</a>
 
-</div>
+<form>
+  <label>Name: <input type="text" placeholder="Your name"></label><br>
+  <label>Email: <input type="email" placeholder="Your email"></label><br>
+  <label>Message: <textarea placeholder="Leave a sweet note"></textarea></label><br>
+  <button id="loveBtn">Send 💌</button>
+</form>
 
-<!-- NAV DOTS -->
-<div class="dots">
-  <div class="dot active" onclick="goSlide(0)"></div>
-  <div class="dot" onclick="goSlide(1)"></div>
-  <div class="dot" onclick="goSlide(2)"></div>
-  <div class="dot" onclick="goSlide(3)"></div>
+<div class="dec dec1"></div>
+<div class="dec dec2"></div>
+<div class="dec dec3"></div>
+<div class="dec dec4"></div>
+<div class="dec dec5"></div>
+
 </div>
 
 <script>
-// ------------- SLIDER NAVIGATION -------------
-let current=0;
-const slider=document.getElementById("slider");
-const dots=document.querySelectorAll(".dot");
-function goSlide(i){
-  current=i;
-  slider.style.transform=`translateX(-${i*100}vw)`;
-  updateDots();
-}
-function updateDots(){dots.forEach(d=>d.classList.remove("active")); dots[current].classList.add("active");}
-
-// ------------- FLOATING HEARTS -------------
+// FLOATING HEARTS
 const colors=['#ff4b6c','#ff758f','#ffd1dc','#ff9a9e','#fbc2eb'];
 for(let i=0;i<100;i++){
   const f=document.createElement('div'); f.className='floating'; f.innerText='💖';
@@ -177,8 +117,8 @@ for(let i=0;i<100;i++){
   document.body.appendChild(f);
 }
 
-// ------------- BUTTON EXPLODING HEARTS -------------
-const btn=document.getElementById('loveBtn2');
+// BUTTON EXPLODING HEARTS
+const btn=document.getElementById('loveBtn');
 btn.addEventListener('click', function(e){
   e.preventDefault();
   for(let i=0;i<30;i++){
